# mahout

./: .cr.yaml  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  RELEASE.md  dune-project  index.yaml  mahout.opam  mahout.smv
.github/workflows/: e2e-test.yaml  helm-chart-release.yaml  model-check.yaml  test.yaml
charts/mahout/: Chart.yaml  values.yaml
charts/mahout/templates/: _helpers.tpl  deployment.yaml  gateway-nginx-conf-template.yaml  mahout.anqou.net_mastodons.yaml  role.yaml  rolebinding.yaml  service.yaml  serviceaccount.yaml
config/: mahout.anqou.net_mastodons.yaml  mastodon1.yaml  test-pod.yaml
e2e/: Makefile  dune  e2e.ml  main.ml  values.yaml
e2e/manifests/: clusterrole.yaml  clusterrolebinding.yaml  gateway-nginx-conf-template.yaml  mahout.anqou.net_mastodons.yaml  mastodon.yaml  mastodon0-v4.1.9.yaml  mastodon0-v4.2.0-restart.yaml  mastodon0-v4.2.0.yaml  mastodon0-v4.2.12.yaml  minio.yaml  operator.yaml  patched-gateway-nginx-conf.yaml  postgres.yaml  redis.yaml  secret-env.yaml  serviceaccount.yaml
lib/: cmd.ml  dune  gateway_nginx_conf.ml  http_server.ml  k.ml  label.ml  label_selector.ml  logg.ml  mahout.ml  mahout_v1alpha1_api.ml  mastodon.ml  mastodon_reconciler.ml  net_anqou_mahout.ml  priority_queue.ml  reconciler.ml  yume.ml
lib_k8s_1_28_client/: dune
lib_k8s_1_28_client/src/apis/: admissionregistration_api.ml  admissionregistration_api.mli  admissionregistration_v1_api.ml  admissionregistration_v1_api.mli  admissionregistration_v1alpha1_api.ml  apis_api.ml  (+108 more)
lib_k8s_1_30_client/: dune
test/: dune  test_mahout.ml
(+908 files in other folders)
